--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +18,9 @@
            Email: jmgonzalezli@unadvirtual.edu.co <br>
         </p>
     </h3>
+
+    <h2>Fases del Proyecto</h2>
+    <a href="fase2/design.html">Fase 2</a>
 </body>
 </html>
 
