--- a/fase2/design.html
+++ b/fase2/design.html
@@ -16,8 +16,8 @@
             <li>Inicio</li>
             <li>Temas
                 <ul>
-                    <li>Tema 1</li>
-                    <li>Tema 2</li>
+                    <li>Sintaxis y Selectores CSS</li>
+                    <li>Interaccion Humano Ordenador</li>
                 </ul>
             </li>
             <li>Recursos
@@ -39,22 +39,87 @@
     <!-- Contenido principal de la pagina -->
     <main>
         <section>
-            <h4>Proposito del sitio</h4>
-            <p>El proposito de este sitio es impulsar las estrategias del aprendizaje correspondiente a la sintaxis y selectores CSS, interaccion humano ordenador</p>
+            <h4>Proposito del Sitio</h4>
+            <p>Impulsar las estrategias del aprendizaje correspondiente a la Sintaxis y Selectores CSS asi como la Interaccion Humano Ordenador</p>
         </section>
          
         <article>
-            <h4>Tema 1 (sintaxis y selectores css.)</h4>
+            <h4>Sintaxis y Selectores CSS</h4>
             <img src="Image/Sintaxis.jpg" alt="descripcion alternativa (imagen que muestra la sintaxis)">
             <p>
-                borrador de los contenidos del sitio web
+                CSS es el formato recomendado para las paginas escritas en formato HTML en base al estandar
+                hojas en estilo de cascada (CSS Cascading Style Sheets). Este estandar nos ahorra tiempo, da
+                consistencia y facilita la escritura de paginas web.
+                Se emplea CSS para definir el aspecto de cada elemento como el color, tamaño, tipo de letra,   posicion, entre otros.
             </p>
+            <p>Hay tres formas de incluir el codigo de estilo en nuestra pagina HTML
+            </p>
+            <p>Primera forma: incluir estilo como atributo de etiqueta.</p>
+            <p>Se pueden emplear instrucciones de estilo CSS con el atributo style dentro de cualquier etiqueta HTML <br>
+                Es la opcion menos aconsejada y usada, al no separar bien contenido y presentacion <br>
+                Dificulta la uniformidad y estandarizacion del sitio <br>
+                Opcion a emplear para aplicar un formato de forma excepcional a un solo elemento <br>
+            </p>
+            <p>Segunda forma: Incluir estilo en el cuerpo de la etiqueta STYLE</p>
+            <p>Se pueden emplear instrucciones de estilo CSS empleando una etiqueta STYLE en la seccion
+            HEAD de nuestro documento HTML <br>
+            Permite aplicar el estilo definido a todos los elementos de un determinado tipo de contenido <br>
+        </p>
+        <p>Tercera forma: incluir el estilo en un fichero .css independiente</p>
+        <p>
+            Podemos definir un documento CSS con el estilo, y utilizarlo ası en todas las paginas html de
+            manera uniforme <br>
+            Es la opcion mas aconsejada, por ser la que permite una mejor separacion entre contenido y
+            presentacion <br>
+        </p>
+        <p>Selectores Basicos CSS</p>
+        <p>Selector universal</p>
+        <p>
+            Se utiliza para seleccionar todos los elementos de la pagina.
+            El selector universal se indica mediante un asterisco (*). A pesar de su sencillez, no se utiliza habitualmente, ya que es difıcil que un mismo estilo se pueda aplicar a todos los elementos de una pagina <br>
+            El selector padding se usa para rellenar espacio alrededor de un contenido especificado <br>
+            El selector margin hace referencia a la margen <br>
+        </p>
+        <p>Selector de tipo o etiqueta</p>
+        <p>
+            Selecciona todos los elementos de la pagina cuya etiqueta HTML coincide con el valor del selector.
+        </p>
+        <p>Selector descendente</p>
+        <p>
+            Selecciona los elementos que se encuentran dentro de otros elementos. Un elemento es descendiente de otro cuando se encuentra entre las etiquetas de apertura y de cierre del otro elemento.
+        </p>
+        <p>Selector de ID</p>
+        <p>
+            Permite seleccionar un elemento a traves del valor de su atributo id <br>
+            Este tipo de selectores solo seleccionan un elemento de cada pagina, ya que el valor del atributo id no se puede repetir en dos elementos de la misma pagina <br>
+            La sintaxis de los selectores de ID es muy parecida a la de los selectores de clase, salvo que se utiliza el sımbolo de la almohadilla (#) en vez del punto (.): #destacado { color: red; } <br>
+        </p>
+        <p>
+            Referencias Bibliograficas
+        </p>
+        <p>
+            Durango, A. (2015). Diseño Web con CSS: 2ª Edición. IT Campus
+            Academy.https://books.google.es/books?hl=es&lr=&id=bCXsCgAAQBAJ&oi=fnd&pg=PA11&dq=sintaxis+y+selectores+CSS&ots=mJwo7LSo2a&sig=dYdcHv0-40-psGDMSU3xmA_nRY4#v=onepage&q=sintaxis%20y%20selectores%20CSS&f=false
+
+        </p>
+        <p>
+            Cabrera, L. V. (2012). Introducción a CSS. Obtenido de https://www. cs. us.
+            es/blogs/bd2013/files/2013/09/IntroducciónCSS. pdf.
+        </p>
+
         </article>
 
         <article>
-            <h4>Tema 2 (interaccion humano ordenadores)</h4>
+            <h4>Interaccion Humano Ordenador</h4>
             <img src="Image/Interaccion.jpg" alt="imagen que muestra la interaccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus voluptatibus alias corporis aliquid sunt illum excepturi cumque non, voluptate ducimus iure a repudiandae quaerat recusandae tenetur. Repudiandae, vel! Eveniet, iusto.</p>
+            <p>La Interacción Persona Ordenador (IPO) es un área de desarrollo reciente, como tantas otras ligadas al campo de los ordenadores, con un carácter marcadamente interdisciplinario y que en los últimos años está viviendo un auge espectacular en sus diversas vertientes. Este auge se produce gracias a la capacidad cada vez mayor de los equipos informáticos y a la existencia de herramientas y aplicaciones cada vez más sofisticadas. Así, hoy día no nos asombra
+            tener al alcance de nuestro cursor la última información procedente de cualquier lugar y referente a cualquier tema, participar en una conversación en la que los interlocutores estén separados por océanos sabiendo que la presencia de nuestros contertulios no se limita a la voz e incluso, aunque sea entre sueños, conseguir que nuestro ordenador nos de consejos acerca de la mejor forma de escribir un documento de trabajo, sea éste un anuncio, un examen o el prólogo de un libro.</p>
+            <p>
+                Referencias Bibliograficas
+            </p>
+            <p>
+                Abascal, J., & Morillón, R. (2002). Interacción persona-ordenador. Inteligencia Artif., 6(16), 9-24.
+            </p>
         </article>
     </main>
     <hr>
